<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/logoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        android:layout_margin="20dp"
        style="@style/logoText"/>
    <TextView
        android:id="@+id/subLogoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trust"
        android:layout_marginTop="-15dp"
        style="@style/trust"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="171dp"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/logos" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_margin="20dp">
        <EditText
            android:id="@+id/numberOne"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="end"
            android:inputType="number"
            android:maxLength="1"
            android:digits="12345678"
            android:cursorVisible="false"
            android:hint="@string/number"
            style="@style/enterNumber"
            android:background="@drawable/number_shape"
            android:autofillHints="@string/number"/>
        <TextView
            android:id="@+id/inputNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/numberDescription"
            style="@style/numbersDescription"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"/>
        <EditText
            android:id="@+id/numberTwo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:inputType="number"
            android:maxLength="2"
            android:cursorVisible="false"
            android:hint="@string/number"
            style="@style/enterNumber"
            android:background="@drawable/number_shape"
            android:autofillHints="@string/number"/>
        />
    </GridLayout>
    <Button
        android:id="@+id/generateNumbers"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/generateNumbers"
        style="@style/generateNumbers"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        style="@style/result"
        android:layout_margin="30dp"/>
    <TextView
        android:id="@+id/nameSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vytautas_kuklys"
        android:textAlignment="center"
        android:layout_margin="30dp"/>
</LinearLayout>